test-suite/failure/EraseConv.v
Fail Check (2 <<<: nat).

